tests/ui/error-codes/E0509.stderr
error[E0509]: cannot move out of type `DropStruct`, which implements the `Drop` trait
  --> $DIR/E0509.rs:16:23
   |
LL |     let fancy_field = drop_struct.fancy;
   |                       ^^^^^^^^^^^^^^^^^
   |                       |
   |                       cannot move out of here
   |                       move occurs because `drop_struct.fancy` has type `FancyNum`, which does not implement the `Copy` trait
   |
note: if `FancyNum` implemented `Clone`, you could clone the value
  --> $DIR/E0509.rs:1:1
   |
LL | struct FancyNum {
   | ^^^^^^^^^^^^^^^ consider implementing `Clone` for this type
...
LL |     let fancy_field = drop_struct.fancy;
   |                       ----------------- you could clone this value
help: consider borrowing here
   |
LL |     let fancy_field = &drop_struct.fancy;
   |                       +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0509`.
